# env.py

./: .gitignore  .gitmodules  .script_config.json  .scripts.yaml  README.md  pyproject.toml
.github/workflows/: python-package.yml
envpy/: __init__.py  __main__.py
envpy/src/: __init__.py
python/: _common.py  _config.py  _setup_environment.py  create_venv.py  generate_stubs.py  install_dependencies.py  install_uv.py  setup_environment.py
src/example/: _version.py
test/: test_core.py  test_utils.py
